# High-dimensional-Regret-Minimization

./: .gitignore  Makefile  README.md  attribute_subset.cpp  attribute_subset.h  experiment_random.cpp  experiment_random.h  highdim.cpp  highdim.h  lp.cpp  lp.h  main.cpp  maxUtility.cpp  plot_generator.py  run  script.py  script_0.py  script_1.py  script_vary.py  script_vary_save.py
ExistingAlg/: CMakeLists.txt  Readme.md  exp_stats.cpp  exp_stats.h  main.cpp
ExistingAlg/Others/: data_struct.h  data_utility.cpp  data_utility.h  operation.cpp  operation.h
ExistingAlg/UtilityApprox/: UtilityApprox.cpp  UtilityApprox.h
datasets/: JL.txt  a10-10000.txt  a30-10000.txt  a30-500.txt  a50-300.txt  a50-500.txt
datasets/real/: car.txt  nba.txt
datasets/real_processed/: airline.txt  household.txt  movie.txt  nba.txt
experiments/: __init__.py  aggregation.py  config.py  datasets.py  execution.py  generate_uniform.cpp  plotting.py  prepare_dataset.cpp  run.py
experiments/tests/: test_aggregation.py  test_config.py  test_execution.py  test_plotting.py
other/: lp.cpp  maxUtility.cpp  maxUtility.h  operation.cpp  operation.h  sphere.cpp
output/: ext_pt  hyperplane_data
run.dSYM/Contents/Resources/DWARF/: run
